Semana 07 Segurança, aula Autenticação com BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 #Semana 03 - Criando, alterando e excluindo
 spring.freemarker.suffix=.ftl
+# Semana 07 Segurança, aula Autenticação com BD
+spring.jpa.defer-datasource-initialization=true
